tests/fa/errors/persian_type.salam
// EXPECT: خطا۰۰۲
// LANG: fa
تابع اصلی:
    x i32 = "سلام"
پایان
